--- a/web/assets/css/colors/main.css
+++ b/web/assets/css/colors/main.css
@@ -83,6 +83,7 @@ a.button.border,
 button.panel-apply,
 .layout-switcher a:hover,
 .listing-features.checkboxes li:before,
+.listing-features.uncheckboxes li:before,
 .comment-by a.reply:hover,
 .add-review-photos:hover,
 .office-address h3:after,
