--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -4554,10 +4554,19 @@ a.send-message-to-owner.button {
 	padding: 0 0 0 30px;
 }
 
+.listing-features.uncheckboxes li {
+	color: #333;
+	display: block;
+	position: relative;
+	margin: 0 0 10px 0;
+	padding: 0 0 0 30px;
+}
+
 .listing-features li:last-child { margin: 0; }
 
 .listing-features li span,
-.listing-features.checkboxes li {
+.listing-features.checkboxes li,
+.listing-features.uncheckboxes li {
 	color: #707070;
 }
 
@@ -4567,6 +4576,26 @@ a.send-message-to-owner.button {
 	height: 19px;
 	position: relative;
 	content: "\f00c";
+	font-family: "FontAwesome";
+	font-size: 12px;
+	color: #fff;
+	text-align: center;
+	line-height: 15px;
+	background-color: #66676b;
+	border: 2px solid transparent;
+	transition: border-color 0s;
+	border-radius: 4px;
+	position: absolute;
+	left: 0;
+	top: 3px;
+}
+
+.listing-features.uncheckboxes li:before {
+	display: inline-block;
+	width: 19px;
+	height: 19px;
+	position: relative;
+	content: "\f00d";
 	font-family: "FontAwesome";
 	font-size: 12px;
 	color: #fff;
@@ -8467,6 +8496,66 @@ body .notification strong { border: none; }
 	border: 2px solid #66676b;
 }
 
+/*----------------------------------- */
+/* Custom uncheckboxes
+------------------------------------- */
+.uncheckboxes {
+	list-style: none;
+	padding: 0;
+}
+
+.uncheckboxes.in-row label { margin-top: 9px;}
+.uncheckboxes.one-in-row label { margin-top: 9px; width: 100%; }
+
+.uncheckboxes li { padding: 4px 0; }
+.uncheckboxes li:last-child { margin-bottom: -8px; }
+
+.uncheckboxes label {
+	display: inline-block;
+	cursor: pointer;
+	position: relative;
+	padding-left: 28px;
+	margin-right: 20px;
+	margin-bottom: 0;
+	line-height: 24px;
+	font-size: 16px;
+}
+
+.uncheckboxes label span {
+	color: #909090;
+}
+
+.uncheckboxes input[type=checkbox] { display: none; }
+
+.uncheckboxes label:before {
+	content: "";
+	display: inline-block;
+	width: 19px;
+	height: 19px;
+	margin-right: 10px;
+	position: absolute;
+	left: 0;
+	top: 3px;
+	background-color: #fff;
+	border: 2px solid #d0d0d0;
+	border-radius: 4px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	transition: all 0.25s;
+	font-family: "FontAwesome";
+	font-size: 12px;
+	color: #fff;
+	text-align: center;
+	line-height: 15px;
+}
+
+.uncheckboxes input[type=checkbox]:checked + label:before {
+	content: "\f00d";
+	background-color: #66676b;
+	border: 2px solid #66676b;
+}
+
 
 
 /* ---------------------------------- */
@@ -8904,6 +8993,59 @@ span.like-icon {
 }
 
 .like-icon.liked:before{
+	opacity: 0;
+}
+
+/* edit Icon */
+span.edit-icon {
+	color: #fff;
+	font-size: 19px;
+	position: absolute;
+	z-index: 101;
+	right: 30px;
+	/*bottom: 30px;*/
+	cursor: normal;
+	background-color: rgba(24,24,24,0.4);
+	display: block;
+	height: 44px;
+	width: 44px;
+	border-radius: 50%;
+	transition: all 0.4s;
+}
+
+.edit-icon:before,
+.edit-icon:after {
+	transition: opacity 0.3s, transform 0.4s cubic-bezier(.0,-.41,.19,2.5);
+	font-family: "FontAwesome";
+	/*position: absolute;
+	right: 0;
+	left: 0;
+	text-align: center;*/
+	top: 9px;
+}
+
+.edit-icon:before {
+	content: "\f044";
+	transform: scale(0.95);
+}
+
+.edit-icon:after {
+	content: "\f14b";
+	opacity: 0;
+	transform: scale(0.5);
+}
+
+.edit-icon.editd:after {
+	opacity: 1;
+	transform: scale(0.95);
+}
+
+.edit-icon:hover,
+.edit-icon.editd {
+	background-color: #f3103c;
+}
+
+.edit-icon.editd:before{
 	opacity: 0;
 }
 
@@ -10572,7 +10714,7 @@ input:checked + .slider:before {
 /* Data unit for price input */
 .data-unit {
 	position: absolute;
-	top: 12px;
+	bottom: 32px;
 	right: 19px;
 	font-style: normal;
 	color: #aaa;
@@ -11585,7 +11727,8 @@ box-sizing: border-box; }
 	-o-transition: width 300ms ease-in-out;
 	transition: width 300ms ease-in-out; }
 .dropzone .dz-preview.dz-error .dz-error-message {
-	display: block; }
+	display: block;
+	margin-top: 20px; }
 .dropzone .dz-preview.dz-error:hover .dz-error-message {
 	opacity: 1;
 	pointer-events: auto; }
