--- a/src/AppBundle/Resources/views/default/profile.html.twig
+++ b/src/AppBundle/Resources/views/default/profile.html.twig
@@ -142,7 +142,7 @@
                             {% endif %}
                         </div>
                         <div class="tab-content" id="tab2b">
-                            {% if covs|length != 0 %}
+                            {% if covs|length == 0 %}
                                 <div class="row" style="margin-bottom: 100px;">
                                     <div class="col-md-2">
 
@@ -160,31 +160,25 @@
                                     </div>
                                 </div>
                             {% else %}
-                                {% for c in covs %}
-                                    <div class="listing-item-container list-layout">
-                                        <a href="{{ path('covoiturage_show',{ 'id' : c.id }) }}" class="listing-item">
-
-                                            <!-- Image -->
-                                            <div class="listing-item-image">
-                                                {% if c.picture1 is not null and c.picture1|length > 0 %}
-                                                    <img src="{{ asset('assets/images/colocs_pics/' ~ c.picture1) }}" alt="">
-                                                {% else %}
-                                                    <img src="{{ asset('assets/images/Unknown.png') }}" alt="">
-                                                {% endif %}
-                                                <span class="tag">{{ c.city }}</span>
-                                            </div>
-
-                                            <!-- Content -->
-                                            <div class="listing-item-content">
-                                                <div class="listing-badge now-open">{{ c.cost }} DT</div>
-
-                                                <div class="listing-item-inner">
-                                                    <h3>{{ c.title }}</h3>
-                                                    <span style="width: 300px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;">{{ c.description }}</span>
+                                {% for covoiturage in covs %}
+                                    <div class="col-md-12">
+                                        <div href="#" class="listing-item-container compact">
+                                            <div class="listing-item">
+                                                <img src="{{ asset('assets/cov.jpg') }}" alt="">
+                                                <div class="listing-badge now-open">{% if covoiturage.type==1 %} Quotidien {% else %} Simple {% endif %}</div>
+                                                <div class="listing-item-details">
+                                                    <ul>
+                                                        <li>{{ covoiturage.date|date('F jS \\a\\t g:ia') }}</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="listing-item-content">
+                                                    <h2 style="color: #fff;">{{ covoiturage.depart }}  <i class="fa fa-arrow-right"></i> {{ covoiturage.destination }} {% if covoiturage.fumeur==1 %} <img src="{{ asset('assets/smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% else %} <img src="{{ asset('assets/no-smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% endif %}</h2>
+                                                    <span style="font-weight: bold;">Contact: <a style="font-weight: bold; color: snow;" href="{% if covoiturage.user.id == app.user.id %} {{ path('fos_user_profile_show') }} {% else %} {{ path('user_profile',{ 'id' : covoiturage.user.id }) }} {% endif %}">{{ covoiturage.user.phone ~ " - " ~ covoiturage.user.username }}</a></span>
                                                 </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </div>
+                                    <hr>
                                 {% endfor %}
                             {% endif %}
                         </div>
