--- a/src/AppBundle/Resources/views/covoiturage/index.html.twig
+++ b/src/AppBundle/Resources/views/covoiturage/index.html.twig
@@ -36,7 +36,7 @@
                             <div class="col-md-2" style="padding-top: 20px;padding-left: 50px">
                                 <a href="{% if covoiturage.user.id == app.user.id %} {{ path('fos_user_profile_show') }} {% else %} {{ path('user_profile',{ 'id' : covoiturage.user.id }) }} {% endif %}">
                                     <img style="height: 110px; width: 110px;" id="user-img" src="{{ asset('assets/images/users_pics/' ~ covoiturage.user.picture) }}" alt=""><br>
-                                    <h6 style="padding-left: 5px"> {{ covoiturage.user.firstname~" "~covoiturage.user.lastname }}</h6>
+                                    <h5 style="padding-left: 5px"> {{ covoiturage.user.firstname~" "~covoiturage.user.lastname }}</h5>
                                 </a>
                             </div>
                                 <div class="col-md-7">
@@ -50,7 +50,7 @@
                                                 </ul>
                                             </div>
                                             <div class="listing-item-content">
-                                                <h2 style="color: #fff;">{{ covoiturage.depart }}  <i class="fa fa-arrow-right"></i> {{ covoiturage.destination }} {% if covoiturage.fumeur==1 %} <img src="{{ asset('assets/smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% else %} <img src="{{ asset('assets/no-smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% endif %}</h2>
+                                                <h2 style="display:block; width: 400px;white-space: nowrap;color: #fff;overflow: hidden;text-overflow: ellipsis;" >{{ covoiturage.depart }}  <i class="fa fa-arrow-right"></i> {{ covoiturage.destination }} {% if covoiturage.fumeur==1 %} <img src="{{ asset('assets/smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% else %} <img src="{{ asset('assets/no-smoking.png') }}" style=" width: 30px; margin-left: 5px"> {% endif %}</h2>
                                                 <span style="font-weight: bold;">Contact: <a style="font-weight: bold; color: snow;" href="{% if covoiturage.user.id == app.user.id %} {{ path('fos_user_profile_show') }} {% else %} {{ path('user_profile',{ 'id' : covoiturage.user.id }) }} {% endif %}">{{ covoiturage.user.phone ~ " - " ~ covoiturage.user.username }}</a></span>
                                             </div>
                                         </div>
@@ -72,20 +72,41 @@
                             <h3>Nouveau Trajet</h3>
                         </div>
                         <div class="sign-in-form style-1">
-                            {{ form_start(form) }}
-                            {{ form_widget(form) }}
-                            <!-- Date Picker - docs: http://www.vasterad.com/docs/listeo/#!/date_picker -->
-                            <div class="col-lg-6 col-md-12">
-                                <input type="text" id="booking-date" data-lang="en" data-large-mode="true" data-large-default="true" data-min-year="2017" data-max-year="2020" data-lock="from">
-                            </div>
+                            <form class="login" action="{{ path('covoiturage_new') }}" method="post">
 
-                            <!-- Time Picker - docs: http://www.vasterad.com/docs/listeo/#!/time_picker -->
-                            <div class="col-lg-6 col-md-12">
-                                <input type="text" id="booking-time" value="9:00 am">
-                            </div>
-                            <input type="text" data-option="value" id="date-picker" />
-                            <button type="submit" class="button border margin-top-10 float-right">Confirmer</button>
-                            {{ form_end(form) }}
+                                <div class="col-md-12">
+
+                                    <div class="col-md-5">
+                                        <h4>Depart:</h4>
+                                        <input name="depart" type="text" placeholder="" maxlength="15">
+                                        <h4>Date:</h4><input name="date" type="text" id="booking-date" data-lang="fr" data-large-mode="true" data-large-default="true" data-min-year="2018" data-max-year="2020" data-lock="from">
+                                        <h4>Type:</h4>
+                                        <select name="type" class="chosen-select-no-single" >
+                                            <option label="blank">Simple:</option>
+                                            <option>Quotidien</option>
+
+                                        </select>
+
+                                    </div>
+
+                                    <div class="col-md-2">
+                                        <h3> <i class="fa fa-arrow-right"></i></h3>
+                                    </div>
+
+                                    <div class="col-md-5">
+                                        <h4>Destination:</h4>
+                                        <input name="destination" type="text" placeholder="" maxlength="15">
+                                        <h4>Heure:</h4><input name="heure" type="time" >
+                                        <div class="checkboxes in-row margin-bottom-20">
+                                            <input name="fumeur" id="check-a" type="checkbox" name="check" value="Fumeur">
+                                            <label for="check-a">Fumeur</label></div>
+
+                                    </div>
+
+                                </div>
+                                <button type="submit" class="button border margin-top-10 float-right">Confirmer</button>
+
+                            </form>
                         </div>
                     </div>
 
@@ -121,23 +142,7 @@
      <script src="{{ asset('assets/scripts/datedropper.js') }}"></script>
      <script>$('#booking-date').dateDropper();</script>
 
-     <!-- Time Picker - docs: http://www.vasterad.com/docs/listeo/#!/time_picker -->
-     <script src="{{ asset('assets/scripts/timedropper.js') }}"></script>
-     <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/plugins/timedropper.css') }}">
-     <script>
-         this.$('#booking-time').timeDropper({
-             setCurrentTime: false,
-             meridians: true,
-             primaryColor: "#f91942",
-             borderColor: "#f91942",
-             minutesInterval: '15'
-         });
 
-         var $clocks = $('.td-input');
-         _.each($clocks, function(clock){
-             clock.value = null;
-         });
-     </script>
  {% endblock %}
 {% endblock %}
 
